<resources>
    <string name="app_name">Boletim Nota 10</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_nova_turma">Nova Turma</string>

    <string name="menu_home">Início</string>
    <string name="menu_disciplinas">Disciplinas</string>
    <string name="menu_form_turma">Nova Turma</string>
    <string name="menu_form_modulo">Módulos</string>
    <string name="menu_avaliacoes">Avaliações</string>
    <string name="menu_aluno">Aluno</string>
    <string name="escolher_modulos_hint">Escolha as Disciplinas que farão parte do Período:</string>

    <string name="foto_perfil_desc">Foto do Perfil do Aluno</string>
    <string name="usuario_email">Usuário/Email</string>
    <string name="icone_aplicativo">Icone do Aplicativo</string>
    <string name="senha">Senha</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="login">Login</string>
    <string name="criar_conta">Ainda não tem uma conta? Criar Agora.</string>
    <string name="continuar_como_visitante">Continuar como Visitante</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alterar_foto">Alterar Foto</string>
    <string name="informe_seu_nome">Informe seu Nome</string>
    <string name="turmas">Turmas</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="sair">Sair</string>
</resources>