<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".collections.aluno.AlunoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/alunoCardView"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fotoImageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="@dimen/profile_image_margin"
                android:contentDescription="@string/foto_perfil_desc"
                android:src="@drawable/baseline_account_circle_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alterar_foto"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/fotoImageView"
                app:layout_constraintStart_toStartOf="@id/fotoImageView"
                app:layout_constraintTop_toBottomOf="@id/fotoImageView" />

            <EditText
                android:id="@+id/nomeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="Nome do Aluno"
                android:background="@android:color/transparent"
                android:hint="@string/informe_seu_nome"
                android:inputType="textMultiLine"
                android:maxLength="30"
                android:maxLines="2"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textColor="#323232"
                app:layout_constraintEnd_toStartOf="@id/salvarNomeButton"
                app:layout_constraintStart_toEndOf="@+id/fotoImageView"
                app:layout_constraintTop_toTopOf="@+id/fotoImageView"
                tools:text="James Willian" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                app:layout_constraintEnd_toStartOf="@id/salvarNomeButton"
                app:layout_constraintStart_toEndOf="@+id/fotoImageView"
                app:layout_constraintTop_toBottomOf="@+id/nomeEditText"
                tools:text="Matrícula: 20540.2015" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/salvarNomeButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_baseline_save_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/nomeEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nomeEditText"
                app:layout_constraintTop_toTopOf="@id/nomeEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/turmasCardView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alunoCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/turmas"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/editarTurmaImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="@color/white"
                android:src="@drawable/ic_edit_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/disciplinasCardView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/turmasCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/disciplinas"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/sairButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/sair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/disciplinasCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>